Complete listing image API integration
